# CAsyncPolling

./: .clang-format  .gitignore  IDEAS.md  README.md  THOUGHTS.md  meson.build  package-lock.json  package.json  windows.ini
.github/workflows/: cross-platform.yml
.husky/: pre-commit
include/: async.h  async_func.h  asyncio.h  func.h  poll.h  pprint.h  scheduler.h  utils.h
scripts/: lint.sh  setup_linux.sh  setup_macos.sh  test_windows_wine.sh
src/: async.c  main.c  meson.build  poll.c  scheduler.c
tests/: meson.build  test_async.c  test_async_lib.c  test_poll.c  test_ucontext.c
